removed all the blog contents

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,7 +51,8 @@
   .hero-slider.owl-theme .owl-dots .owl-dot span {
     width: 30px;
   }
-  .hero-slider.owl-theme .owl-nav .owl-prev, .hero-slider.owl-theme .owl-nav .owl-next {
+  .hero-slider.owl-theme .owl-nav .owl-prev,
+  .hero-slider.owl-theme .owl-nav .owl-next {
     left: 15px;
     top: auto;
     bottom: 45px;
@@ -64,7 +65,11 @@
     left: auto;
     right: 15px;
   }
-  .hero-slider.hero-slider-two .hero-slider-item .slider-content .slider-image img {
+  .hero-slider.hero-slider-two
+    .hero-slider-item
+    .slider-content
+    .slider-image
+    img {
     top: 0;
   }
   .low-card {
@@ -127,18 +132,34 @@
     position: initial;
     margin-top: 10px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .img-text h3 {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .img-text
+    h3 {
     font-size: 15px;
     margin-bottom: 5px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .img-text p {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .img-text
+    p {
     margin-bottom: 5px;
     font-size: 12px !important;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .img-text .rating i {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .img-text
+    .rating
+    i {
     font-size: 15px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .testimonials-img {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .testimonials-img {
     max-width: 100%;
   }
   .right-way-area .fun-facts-shape.top {
@@ -173,18 +194,7 @@
   .service-area .section-title span::before {
     width: 50px;
   }
-  .blog-area .section-title span::before {
-    width: 50px;
-  }
-  .service-card .service-text {
-    text-align: center;
-  }
-  .blog-card .blog-card-text {
-    padding: 15px 20px;
-  }
-  .blog-card .blog-card-text h3 {
-    font-size: 20px;
-  }
+
   .attorney-card-text {
     padding: 20px 25px;
   }
@@ -229,7 +239,11 @@
   .atron-banner-area .banner-text {
     max-width: 436px;
   }
-  .hero-slider.hero-slider-two .hero-slider-item .slider-content .slider-image img {
+  .hero-slider.hero-slider-two
+    .hero-slider-item
+    .slider-content
+    .slider-image
+    img {
     position: inherit;
     margin-top: 30px;
     margin: 30px auto 0;
@@ -240,7 +254,7 @@
   .low-card-area-two .low-card-contant .low-card-two {
     margin-bottom: 30px;
     -webkit-box-shadow: 0px 0px 20px #eeeeee;
-            box-shadow: 0px 0px 20px #eeeeee;
+    box-shadow: 0px 0px 20px #eeeeee;
   }
   .low-card-area-two .low-card-contant .low-card-two p {
     margin-bottom: 0;
@@ -304,7 +318,12 @@
   .attor-details-item .attor-details-left {
     padding: 0 20px 40px 20px;
   }
-  .attor-details-item .attor-details-left .attor-work .attor-work-left ul li:before {
+  .attor-details-item
+    .attor-details-left
+    .attor-work
+    .attor-work-left
+    ul
+    li:before {
     width: 35px;
     right: -50px;
   }
@@ -437,7 +456,8 @@
   .hero-slider.owl-theme .owl-dots .owl-dot span {
     width: 60px;
   }
-  .hero-slider.owl-theme .owl-nav .owl-prev, .hero-slider.owl-theme .owl-nav .owl-next {
+  .hero-slider.owl-theme .owl-nav .owl-prev,
+  .hero-slider.owl-theme .owl-nav .owl-next {
     left: 35px;
   }
   .hero-slider.owl-theme .owl-nav .owl-next {
@@ -447,12 +467,7 @@
   .signle-fun-fact {
     padding: 40px 40px;
   }
-  .blog-card {
-    text-align: center;
-  }
-  .blog-card .blog-card-text h3 {
-    font-size: 18px;
-  }
+
   .bor-right:last-child {
     border-bottom: 1px solid #e5e5e5;
   }
@@ -462,14 +477,25 @@
     bottom: 0;
     max-width: 340px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .img-text h3 {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .img-text
+    h3 {
     font-size: 20px;
     margin-bottom: 15px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .img-text p {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .img-text
+    p {
     font-size: 14px;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .testimonials-img {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .testimonials-img {
     max-width: 280px;
   }
   .low-card-two {
@@ -502,7 +528,8 @@
   .hero-slider.owl-theme .owl-dots .owl-dot span {
     width: 80px;
   }
-  .hero-slider.owl-theme .owl-nav .owl-prev, .hero-slider.owl-theme .owl-nav .owl-next {
+  .hero-slider.owl-theme .owl-nav .owl-prev,
+  .hero-slider.owl-theme .owl-nav .owl-next {
     left: 40px;
     top: auto;
     bottom: 80px;
@@ -515,7 +542,11 @@
     left: auto;
     right: 40px;
   }
-  .hero-slider.hero-slider-two .hero-slider-item .slider-content .slider-image img {
+  .hero-slider.hero-slider-two
+    .hero-slider-item
+    .slider-content
+    .slider-image
+    img {
     top: 0;
   }
   .choose-card {
@@ -538,9 +569,7 @@
   .attorney-card .attorney-card-text {
     padding: 30px 40px;
   }
-  .blog-card .blog-card-text h3 {
-    font-size: 20px;
-  }
+
   .bor-right {
     border-right: none;
   }
@@ -581,7 +610,11 @@
   .section-title h2 {
     font-size: 30px;
   }
-  .hero-slider.hero-slider-two .hero-slider-item .slider-content .slider-image img {
+  .hero-slider.hero-slider-two
+    .hero-slider-item
+    .slider-content
+    .slider-image
+    img {
     position: inherit;
     margin-top: 30px;
     margin: 30px auto 0;
@@ -592,7 +625,7 @@
   .low-card-area-two .low-card-contant .low-card-two {
     margin-bottom: 30px;
     -webkit-box-shadow: 0px 0px 20px #eeeeee;
-            box-shadow: 0px 0px 20px #eeeeee;
+    box-shadow: 0px 0px 20px #eeeeee;
   }
   .low-card-area-two .low-card-contant .low-card-two p {
     margin-bottom: 0;
@@ -634,14 +667,17 @@
     margin-left: auto;
     margin-right: auto;
   }
-  .testimonials-area .testimonials-slider .testimonials-slider-item .testimonials-img {
+  .testimonials-area
+    .testimonials-slider
+    .testimonials-slider-item
+    .testimonials-img {
     max-width: 375px;
   }
   .testimonials-area .testimonials-slider .testimonials-slider-item .img-text {
     bottom: auto !important;
     top: 50%;
     -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
+    transform: translateY(-50%);
   }
   .attor-details-right {
     margin-top: 30px;
@@ -698,12 +734,7 @@
   .signle-fun-fact {
     padding: 40px 30px;
   }
-  .blog-card .blog-card-text {
-    padding: 20px;
-  }
-  .blog-card .blog-card-text h3 {
-    font-size: 20px;
-  }
+
   .service-card .service-text {
     padding: 20px 15px;
   }
