fixed the images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3376,7 +3376,7 @@ Right Way Area
 }
 
 .video-contant {
-  background-image: url('../img/right-way/right-way-img.jpg');
+  background-image: url('../img/We\ Fight\ For\ Right\,\ Meet\ Us\ To\ Solve\ Your\ Legal\ Problem\ In\ Right\ Way\ \(1\).png');
   background-size: cover;
   background-position: center center;
   width: 100%;
@@ -3902,7 +3902,7 @@ Attorneey Area
 Contact Area
 =================================================*/
 .contact-area {
-  background-image: url('../img/contact-bg.jpg');
+  background-image: url('../img/contact-bg.png');
   background-size: cover;
   background-position: center center;
   position: relative;
