--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4449,7 +4449,7 @@ Page banner Area
 }
 
 .page-banner.bg-1 {
-  background-image: url('../img/page-banner-bg.jpg');
+  background-image: url('../img/contact-bg.png');
 }
 
 .page-banner::before {
