--- a/css/home15.css
+++ b/css/home15.css
@@ -30,13 +30,13 @@ body, button, input, select, optgroup, textarea {
 }
 .main-navigation ul > li > a:hover, .main-navigation ul li li a:hover, .main-navigation ul ul li.current-menu-item > a, .main-navigation ul li li a:before,
 .main-navigation ul ul li.current-menu-ancestor > a, .main-navigation ul > li.menu-item-has-children > a:hover:after {
-	color: #2377FC;
+	color:#D03A29;
 }
 .main-navigation ul > li.menu-item-has-children > a:after {
 	color: #0B1E46;
 }
 .cart-icon .count {
-	background-color: #2377FC;
+	background-color:#D03A29;
 	bottom: -5px;
 }
 .btn-cta-header .octf-btn {
@@ -44,11 +44,11 @@ body, button, input, select, optgroup, textarea {
 	font-family: "DM Sans", Sans-serif;
     font-size: 16px;
     text-transform: capitalize;
-    background-color: #2377FC1A;
+    background-color:#D03A291A;
     border-radius: 5px 5px 5px 5px;
 }
 .btn-cta-header .octf-btn:hover, .btn-cta-header .octf-btn:focus {
-	background-color: #2377FC;
+	background-color:#D03A29;
 	color: #fff;
 }
 .octf-btn-cta .btn-cta-group {
@@ -75,7 +75,7 @@ body, button, input, select, optgroup, textarea {
     margin-top: 0;
 }
 .search-form .search-submit {
-	background-color: #2377FC;
+	background-color:#D03A29;
 }
 .search-form .search-submit:hover {
 	background-color: #FC5723;
@@ -92,14 +92,14 @@ section {
     letter-spacing: 0.05em;
 }
 .top h2 {
-    color: #0B1E46;
+    color: #D03A29;
     font-family: "DM Sans", Sans-serif;
     font-size: 62px;
     font-weight: 700;
     line-height: 74px;
 }
 p {
-	color: #6B7281;
+	color: #81716b;
     font-family: "DM Sans", Sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -112,7 +112,7 @@ p {
     font-weight: 500;
     text-transform: capitalize;
     line-height: 24px;
-    background-color: #2377FC;
+    background-color:#D03A29;
     border-radius: 5px 5px 5px 5px;
 }
 .octf-btn.octf-btn-primary:hover {
@@ -209,7 +209,7 @@ hr {
 	color: #181B31;
 }
 .icon-box-title a:hover {
-	color: #2377FC;
+	color:#D03A29;
 }
 .icon-box-des {
     margin-bottom: 26px;
@@ -239,7 +239,7 @@ hr {
     color: #0B1E46;
 }
 .ot-icon-box .icon-box-btn:hover {
-    color: #2377FC;
+    color:#D03A29;
 }
 .ot-icon-box .icon-box-btn i:before {
     font-size: 16px;
@@ -328,7 +328,7 @@ hr {
     height: 80px;
     line-height: 80px;
     color: #FFFFFF;
-    background: #2377FC;
+    background:#D03A29;
 }
 .solution-block .video-popup a:hover {
 	background-color: #FC5723;
@@ -362,10 +362,10 @@ hr {
     -ms-transition: all 0.3s linear;
 }
 .text-link:hover span {
-	color: #2377FC;
+	color:#D03A29;
 }
 .text-link:hover svg {
-	fill: #2377FC;
+	fill:#D03A29;
 }
 .project-item {
     padding: 0 calc(45px/2);
@@ -434,7 +434,7 @@ hr {
     line-height: 32px;
 }
 .projects-box .portfolio-info h5 a:hover {
-    color: #2377FC;
+    color:#D03A29;
 }
 .projects-box .portfolio-info .portfolio-cates a, .projects-box .portfolio-info .portfolio-cates span {
     color: #6B7281;
@@ -623,7 +623,7 @@ hr {
 	color: #0B1E46;
 }
 .widget-footer a:hover, .widget-footer .social-list li a:hover {
-	color: #2377FC;
+	color:#D03A29;
 }
 .widget-footer .social-list li i {
 	font-size: 17px;
@@ -647,7 +647,7 @@ hr {
     line-height: 28px;
 }
 #back-to-top {
-	color: #2377FC;
+	color:#D03A29;
 }
 @media screen and (min-width: 1024px){
 	.is-stuck {
@@ -683,7 +683,7 @@ hr {
 	.header_mobile .mobile_nav .mobile_mainmenu > li > a:hover, .header_mobile .mobile_nav .mobile_mainmenu > li.current-menu-item > a, 
 	.header_mobile .mobile_nav .mobile_mainmenu > li.current-menu-ancestor > a, .header_mobile .mobile_nav .mobile_mainmenu li li a:hover, 
 	.header_mobile .mobile_nav .mobile_mainmenu ul > li > ul > li.current-menu-ancestor > a, .header_mobile .mobile_nav ul li.current-menu-item > a {
-	    color: #2377FC;
+	    color:#D03A29;
 	}
 }
 @media (max-width: 767px){
