--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5159,3 +5159,11 @@ Gallery  Area
     color: #f0f0f0 !important;
   }
 }
+
+.logo1 {
+  background-image: url('../img/logo/logo.png');
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 64px;
+}
